test/error/badassign.lua
local 1 = "hello";
